# q3d

./: .gitmodules  CMakeLists.txt  CMakelists.txt
includes/q3d/2d/: plane.hpp
includes/q3d/core/: active_camera.hpp  camera.hpp  color.hpp  object.hpp  scene.hpp
includes/q3d/gl/: features.hpp  gl.hpp  ibo.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
includes/q3d/log/: log.hpp
includes/q3d/phys/: aabb.hpp  transform.hpp
includes/q3d/res/: ptr.hpp  resources.hpp
includes/q3d/window/: keys.hpp  window.hpp
src/q3d/2d/: plane.cpp
src/q3d/core/: active_camera.cpp  camera.cpp  color.cpp  object.cpp  scene.cpp
src/q3d/gl/: gl.cpp  ibo.cpp  layouts.cpp  shader.cpp  texture.cpp  uniform.cpp  vao.cpp  vbo.cpp
src/q3d/log/: log.cpp
src/q3d/phys/: aabb.cpp  transform.cpp
src/q3d/res/: objparser.cpp  resources.cpp
src/q3d/system/: camera.cpp  color.cpp
src/q3d/window/: window.cpp
